Updated template README to match TEST_PROJECTS.md

--- a/webdriver_test_tools/templates/README.md.j2
+++ b/webdriver_test_tools/templates/README.md.j2
@@ -12,7 +12,11 @@ Installing with the `-e` flag will update the package automatically when changes
 
 *Note:* Command may be `pip3` instead of `pip` depending on the system
 
-## Basic Usage
+### Configuration
+
+After initializing a project, the URL of the site to be tested will need to be configured. In `{{test_package}}/config/site.py`, set the `SITE_URL` and `BASE_URL` of the `SiteConfig` class. You can add any other URLs you'll need as class variables as well. 
+
+## Basic Command Line Usage
 
 For info on command line arguments:
 
@@ -71,26 +75,33 @@ To do any of the above in a specific browser rather than running in all availabl
 └── templates
 ```
 
-### config/
+This test structure is best used with the [Page Object Model](https://martinfowler.com/bliki/PageObject.html). Interaction with the page should be handled by page objects to minimize the need to alter tests whenever the HTML is changed.
+
+### Test Project Root Contents
+
+`README.md` is a template readme file with similar content to this documentation. `setup.py` is a python package setup file that allows the new test suite to be installed as a pip package.
+
+### Test Package Contents
+
+#### config/
 
 Configurations used by test scripts for site URLs, web driver options, and the python unittest framework.
 
-### data/
+#### data/
 
 Static data for tests that must use specific values (e.g. emails, check-in codes). 
 
-### pages/
+#### pages/
 
-Page object classes for pages and components. These classes should handle locating and interacting with elements on the page.
+Page object classes for pages and components. These classes should handle locating and interacting with elements on the page. A template page object can be found in `templates/page_object.py`.
 
-### tests/
+#### tests/
 
-Test case modules. These use page objects to interact with elements and assert that the expected behavior occurs.
+Test case modules. These use page objects to interact with elements and assert that the expected behavior occurs. A template test file can be found in `templates/test_case.py`.
 
 When adding new test files, be sure to update `tests/__init__.py` to include the new module so the framework can detect the new test cases.
 
-### templates/
+#### templates/
 
 Template files to use as a starting point when writing new test modules or page objects.
-
 
