Moved test_module.py into project/ directory and updated references
Also fixed an issue where the __main__.py project template still passe TestSuiteConfig class to test_module.main()

--- a/webdriver_test_tools/project/templates/__main__.py.j2
+++ b/webdriver_test_tools/project/templates/__main__.py.j2
@@ -1,8 +1,8 @@
 #!/usr/bin/env python3
 
-import webdriver_test_tools
+from webdriver_test_tools.project import test_module
 from {{test_package}} import config, tests
 
 
 if __name__ == '__main__':
-    webdriver_test_tools.test_module.main(tests, config.TestSuiteConfig)
+    test_module.main(tests, config)
