Set required version of webdriver_test_tools to an exact match

--- a/webdriver_test_tools/project/templates/setup.py.j2
+++ b/webdriver_test_tools/project/templates/setup.py.j2
@@ -7,5 +7,5 @@ setup(
         version='0.1.0',
         packages=find_packages(),
         install_requires=[
-            'webdriver-test-tools>={{ test_tools_version }}',
+            'webdriver-test-tools=={{ test_tools_version }}',
             ])
