--- a/webdriver_test_tools/project/templates/README.md.j2
+++ b/webdriver_test_tools/project/templates/README.md.j2
@@ -33,32 +33,44 @@ python -m {{ test_package }}
 To run all test cases in a file:
 
 ```
-python -m {{ test_package }} --module <module_name>
+python -m {{ test_package }} --module <test_module>
+```
+
+Multiple modules can be run at once:
+
+```
+python -m <test_package> --module <test_module0> <test_module1>
 ```
 
 To run a single TestCase class in a file:
 
 ```
-python -m {{ test_package }} --module <module_name> --test <TestCaseClassName>
+python -m {{ test_package }} --module <test_module> --test <TestClass>
 ```
 
-To run just one test function in a TestCase class:
+To run just one test method in a TestCase class:
 
 ```
-python -m {{ test_package }} --module <module_name> --test <TestCaseClassName>.<test_function_name>
+python -m {{ test_package }} --module <test_module> --test <TestClass>.<test_method>
 ```
 
 The `--module` argument can be omitted when using the `--test` argument:
 
 ```
-python -m {{ test_package }} --test <TestCaseClassName>
+python -m {{ test_package }} --test <TestClass>
 ```
 
 ```
-python -m {{ test_package }} --test <TestCaseClassName>.<test_function_name>
+python -m {{ test_package }} --test <TestClass>.<test_method>
 ```
 
 *Note:* This can be less efficient as each module will be searched for the specified test, but the difference in performance will likely be unnoticeable.  
+
+Multiple test classes and test methods can be run at once:
+
+```
+python -m <test_package> --test <TestClass0> <TestClass1>.<test_method>
+```
 
 To do any of the above in a specific browser rather than running in all available browsers, use the `--browser <browser>` command line argument. For a list of options you can specify with `--browser`, run `python -m {{ test_package }} --help`.
 
