--- a/webdriver_test_tools/project/templates/templates/test_case.py.j2
+++ b/webdriver_test_tools/project/templates/templates/test_case.py.j2
@@ -3,7 +3,7 @@
 
 # Imports
 # ----------------------------------------------------------------
-"""IMPORT PAGE OBJECTS HERE"""
+# IMPORT PAGE OBJECTS HERE
 
 import webdriver_test_tools
 from webdriver_test_tools.classes.webdriver_test_case import WebDriverTestCase
@@ -15,7 +15,7 @@ from selenium import webdriver
 # ----------------------------------------------------------------
 
 class TemplateTestCase(WebDriverTestCase):
-    """Description of this TestCase"""
+    """DESCRIPTION OF TEST CASE HERE"""
 
     # URL to go to at the start of each test
     SITE_URL = config.SiteConfig.SITE_URL
@@ -23,5 +23,4 @@ class TemplateTestCase(WebDriverTestCase):
     # Test Functions
     # --------------------------------
 
-    """TEST FUNCTIONS HERE"""
 
