Added Browsers import to template test case

--- a/webdriver_test_tools/project/templates/templates/test_case.py.j2
+++ b/webdriver_test_tools/project/templates/templates/test_case.py.j2
@@ -1,7 +1,7 @@
 # IMPORT PAGE OBJECTS HERE
 
 import webdriver_test_tools
-from webdriver_test_tools.classes.webdriver_test_case import WebDriverTestCase
+from webdriver_test_tools.classes.webdriver_test_case import WebDriverTestCase, Browsers
 from {{ test_package }} import config
 from selenium import webdriver
 
@@ -14,6 +14,6 @@ class TemplateTestCase(WebDriverTestCase):
     # URL to go to at the start of each test
     SITE_URL = config.SiteConfig.SITE_URL
 
-    # Test Functions
+    # Test Methods
 
 
