--- a/webdriver_test_tools/project/templates/setup.py.j2
+++ b/webdriver_test_tools/project/templates/setup.py.j2
@@ -8,4 +8,5 @@ setup(
         packages=find_packages(),
         install_requires=[
             'webdriver-test-tools=={{ test_tools_version }}',
+            'selenium>=3.9',
             ])
