README now templates display the tool version used to generate them

--- a/webdriver_test_tools/project/templates/README.md.j2
+++ b/webdriver_test_tools/project/templates/README.md.j2
@@ -91,7 +91,7 @@ This test structure is best used with the [Page Object Model](https://martinfowl
 
 ### Test Project Root Contents
 
-`README.md` is a template readme file with similar content to this documentation. `setup.py` is a python package setup file that allows the new test suite to be installed as a pip package.
+`setup.py` is a python package setup file that allows the new test suite to be installed as a pip package.
 
 ### Test Package Contents
 
@@ -117,3 +117,6 @@ When adding new test files, be sure to update `tests/__init__.py` to include the
 
 Template files to use as a starting point when writing new test modules or page objects.
 
+---
+
+Generated using `webdriver_test_tools` {{ test_tools_version }}
