Fixed bugs with config file templates
- Moved config/__init__.py to __init__.py.j2 to avoid errors for nonexistent files
- Added empty config/__init__.py so python recognizes the templates/config/ directory
- Updated initialize.create_config_files() so the templates are rendered and the correct __init__ file is copied over
- Removed trailing spaces in browserstack.py.j2
- Added comment to __init__.py files in template directories to explain that they are used for locating the directories and not for copying over
- Updated setup.py.j2 to use selenium_version in install_requires

--- a/webdriver_test_tools/project/templates/setup.py.j2
+++ b/webdriver_test_tools/project/templates/setup.py.j2
@@ -8,5 +8,5 @@ setup(
         packages=find_packages(),
         install_requires=[
             'webdriver-test-tools=={{ test_tools_version }}',
-            'selenium>=3.9',
+            'selenium>={{ selenium_version }}',
             ])
