Changed default browserstack.video configuration to False to speed up tests

--- a/webdriver_test_tools/project/templates/config/browserstack.py.j2
+++ b/webdriver_test_tools/project/templates/config/browserstack.py.j2
@@ -18,7 +18,7 @@ class BrowserStackConfig(browserstack.BrowserStackConfig):
     BS_CAPABILITIES = {
         'project': '{{ test_package }}',
         # 'build': '',
-        # 'browserstack.video': True,
+        'browserstack.video': False,
         # 'browserstack.selenium_version': '{{ selenium_version }}',
     }
 
