--- a/webdriver_test_tools/project/templates/config/browserstack.py.j2
+++ b/webdriver_test_tools/project/templates/config/browserstack.py.j2
@@ -3,18 +3,21 @@ from webdriver_test_tools.classes.webdriver_test_case import *
 from {{test_package}}.config import BrowserConfig
 
 
-# TODO: document when everything is in place
 class BrowserStackConfig(browserstack.BrowserStackConfig):
-    """Configurations for BrowserStack testing"""
+    """Configurations for BrowserStack testing
 
-    # Set to True to enable BrowserStack testing
+    :var BrowserStackConfig.ENABLE: (Default = False) Set to True to enable BrowserStack testing
+    :var BrowserStackConfig.USERNAME: Account username. Required for BrowserStack testing
+    :var BrowserStackConfig.ACCESS_KEY: Access key. Required for BrowserStack testing
+    :var BrowserStackConfig.BS_CAPABILITIES: BrowserStack test configurations
+    :var BrowserStackConfig.BROWSER_TEST_CLASSES: Dictionary of browser test case classes to
+        use indexed by the short name for that class (i.e. its command line argument).
+    """
+
     ENABLE = False
-    # Account username. Projects will need to override this
     USERNAME = ''
-    # Access key. Projects will need to override this
     ACCESS_KEY = ''
 
-    # BrowserStack test configurations
     BS_CAPABILITIES = {
         'project': '{{ test_package }}',
         # 'build': '',
@@ -22,8 +25,9 @@ class BrowserStackConfig(browserstack.BrowserStackConfig):
         # 'browserstack.selenium_version': '{{ selenium_version }}',
     }
 
-    # Configure available browsers
+    # Defaults to using the same browsers configured in BrowserConfig class
     BROWSER_TEST_CLASSES = BrowserConfig.BROWSER_TEST_CLASSES.copy()
+    # Add additional browsers here:
     _additional_browsers = {
         # Browsers.FIREFOX: FirefoxTestCase,
         # Browsers.CHROME: ChromeTestCase,
