--- a/webdriver_test_tools/project/templates/config/__init__.py.j2
+++ b/webdriver_test_tools/project/templates/config/__init__.py.j2
@@ -1,4 +1,6 @@
 from .site import SiteConfig
 from .test import TestSuiteConfig
+from .webdriver import WebDriverConfig
 from .browser import BrowserConfig
 from .browserstack import BrowserStackConfig
+
