Changed how LOG_PATH is handled and added logging to more browsers
- Logging is now configured in the get_<browser>_driver() functions to
allow for projects to override LOG_PATH
- Added Logging for IE and Edge
- Renamed Chrome mobile log to be distinct from the log generated by the
normal Chrome driver

--- a/webdriver_test_tools/project/templates/config/webdriver.py.j2
+++ b/webdriver_test_tools/project/templates/config/webdriver.py.j2
@@ -36,8 +36,8 @@ class WebDriverConfig(config.WebDriverConfig):
 
     # IMPLICIT_WAIT = 0
 
-    # FIREFOX_KWARGS = {'log_path': os.path.join(LOG_PATH, 'geckodriver.log')}
-    # CHROME_KWARGS = {'service_log_path': os.path.join(LOG_PATH, 'chromedriver.log')}
+    # FIREFOX_KWARGS = {}
+    # CHROME_KWARGS = {}
     # SAFARI_KWARGS = {}
     # IE_KWARGS = {}
     # EDGE_KWARGS = {}
