Set version.__selenium__ to 3.11.0 and modified template setup.py
- Updated required version of selenium to latest version (3.11.0)
- Template setup.py now requires a minimum version of webdriver_test_tools
rather than an exact version

--- a/webdriver_test_tools/project/templates/project_root/setup.py.j2
+++ b/webdriver_test_tools/project/templates/project_root/setup.py.j2
@@ -7,6 +7,6 @@ setup(
         version='0.1.0',
         packages=find_packages(),
         install_requires=[
-            'webdriver-test-tools=={{ test_tools_version }}',
+            'webdriver-test-tools>={{ test_tools_version }}',
             'selenium>={{ selenium_version }}',
             ])
