--- a/webdriver_test_tools/project/templates/config/browser.py.j2
+++ b/webdriver_test_tools/project/templates/config/browser.py.j2
@@ -16,5 +16,7 @@ class BrowserConfig(browser.BrowserConfig):
         # Browsers.IE: IETestCase,
         # Browsers.EDGE: EdgeTestCase,
         # Browsers.CHROME_MOBILE: ChromeMobileTestCase,
+        # Browsers.CHROME_HEADLESS: ChromeHeadlessTestCase,
+        # Browsers.FIREFOX_HEADLESS: FirefoxHeadlessTestCase,
     }
 
