documented --headless in project template README and rebuilt docs

--- a/webdriver_test_tools/project/templates/project_root/README.rst.j2
+++ b/webdriver_test_tools/project/templates/project_root/README.rst.j2
@@ -9,13 +9,15 @@ Setup
 Installation
 ~~~~~~~~~~~~
 
-After initializing the test project, change to the root directory of the project and run:
+After initializing the test project, change to the root directory of the project
+and run:
 
 ::
 
     pip install -e .
 
-Installing with the ``-e`` flag will update the package automatically when changes are made to the source code.
+Installing with the ``-e`` flag will update the package automatically when
+changes are made to the source code.
 
 **Note:** Command may be ``pip3`` instead of ``pip`` depending on the system
 
@@ -23,7 +25,10 @@ Installing with the ``-e`` flag will update the package automatically when chang
 Configuration
 ~~~~~~~~~~~~~
 
-After initializing a project, the URL of the site to be tested will need to be configured. In ``{{test_package}}/config/site.py``, set the ``SITE_URL`` and ``BASE_URL`` of the ``SiteConfig`` class. You can add any other URLs you'll need as class variables as well. 
+After initializing a project, the URL of the site to be tested will need to be
+configured. In ``{{test_package}}/config/site.py``, set the ``SITE_URL`` and
+``BASE_URL`` of the ``SiteConfig`` class. You can add any other URLs you'll need
+as class variables as well. 
 
 
 Basic Command Line Usage
@@ -57,21 +62,50 @@ To run specific TestCase classes:
 
     python -m {{test_package}} --test <TestClass>[.<test_method>] [<TestClass>[.<test_method>] ...]
 
-The ``--test`` argument will run all tests in a class if no method is specified for it.
+The ``--test`` argument will run all tests in a class if no method is specified
+for it.
 
-**Note:** If the ``--module`` and ``--test`` arguments are used together, only the specified modules will be searched when looking for the specified test classes. If any of the test classes do not exist in any of the specified modules, they will be ignored.
+**Note:** If the ``--module`` and ``--test`` arguments are used together, only
+the specified modules will be searched when looking for the specified test
+classes. If any of the test classes do not exist in any of the specified
+modules, they will be ignored.
 
 
 Using Specific Browsers
 ^^^^^^^^^^^^^^^^^^^^^^^
 
-To do any of the above in specific browsers rather than running in all available browsers, use the ``--browser`` command line argument:
+To do any of the above in specific browsers rather than running in all available
+browsers, use the ``--browser`` command line argument:
 
 ::
 
     python -m {{test_package}} <args> --browser <browser> [<browser ...]
 
-For a list of options you can specify with ``--browser``, run ``python -m {{test_package}} --help``.
+For a list of options you can specify with ``--browser``, run ``python -m
+{{test_package}} --help``.
+
+
+Using Headless Browsers
+^^^^^^^^^^^^^^^^^^^^^^^
+
+By default, tests run using the browser's GUI. While it can be helpful to see
+what's going on during test execution, loading and rendering the browser window
+can be resource-intensive and slows down performance during test execution.
+
+To improve performance, tests can be run in `headless browsers`_ using the
+``--headless`` argument:
+
+::
+
+    python -m {{test_package}} <args> --headless
+
+**Note:** When using the ``--headless`` argument, tests will only be run with
+the following web drivers that support running in a headless environment:
+
+    * `Chrome <https://developers.google.com/web/updates/2017/04/headless-chrome>`__
+    * `Firefox <https://developer.mozilla.org/en-US/Firefox/Headless_mode>`__
+
+.. _headless browsers: https://en.wikipedia.org/wiki/Headless_browser
 
 
 List Available Tests
@@ -99,7 +133,8 @@ To only list specific test classes:
 Project Structure
 -----------------
 
-``webdriver_test_tools --init`` will create the following files and directories inside the project directory:
+``webdriver_test_tools --init`` will create the following files and directories
+inside the project directory:
 
 ::
 
@@ -125,20 +160,25 @@ Project Structure
         └── tests/
             └── __init__.py
 
-This test structure is designed to be used with the `Page Object Model <https://martinfowler.com/bliki/PageObject.html>`__. Interaction with the page should be handled by page objects to minimize the need to alter tests whenever the HTML is changed.
+This test structure is designed to be used with the `Page Object Model
+<https://martinfowler.com/bliki/PageObject.html>`__. Interaction with the page
+should be handled by page objects to minimize the need to alter tests whenever
+the HTML is changed.
 
 
 Test Project Root Contents
 ~~~~~~~~~~~~~~~~~~~~~~~~~~
 
-* ``setup.py``: Python package setup file that allows the new test suite to be installed as a pip package.
+* ``setup.py``: Python package setup file that allows the new test suite to be
+  installed as a pip package.
 
 
 Test Package Root Contents
 ~~~~~~~~~~~~~~~~~~~~~~~~~~
 
 * ``__main__.py``: Required to run tests from the command line. 
-* ``__init__.py``: Empty init file so Python recognizes the directory as a package.
+* ``__init__.py``: Empty init file so Python recognizes the directory as a
+  package.
 
 
 Test Package Directories
@@ -147,10 +187,12 @@ Test Package Directories
 config/
 ^^^^^^^
 
-Configurations used by test scripts for site URLs, web driver options, and the python unittest framework.
+Configurations used by test scripts for site URLs, web driver options, and the
+python unittest framework.
 
 * ``browser.py``: Configure which browsers to run tests in.
-* ``browserstack.py``: Enable and configure testing with `BrowserStack <https://browserstack.com>`__.
+* ``browserstack.py``: Enable and configure testing with `BrowserStack
+  <https://browserstack.com>`__.
 * ``site.py``: Configure URLs used for testing.
 * ``test.py``: Configure the ``unittest.TestRunner`` class.
 * ``webdriver.py``: Configure WebDrivers and log output directory.
@@ -159,32 +201,42 @@ Configurations used by test scripts for site URLs, web driver options, and the p
 data/
 ^^^^^
 
-Static data for tests that must use specific values (e.g. emails, usernames, etc).
+Static data for tests that must use specific values (e.g. emails, usernames,
+etc).
 
 log/
 ^^^^
 
-Default output directory for WebDriver logs. This can be changed in ``config/webdriver.py``.
+Default output directory for WebDriver logs. This can be changed in
+``config/webdriver.py``.
 
 pages/
 ^^^^^^
 
-Page object classes for pages and components. These classes should handle locating and interacting with elements on the page. A template page object can be found in ``templates/page_object.py``.
+Page object classes for pages and components. These classes should handle
+locating and interacting with elements on the page. A template page object can
+be found in ``templates/page_object.py``.
 
 tests/
 ^^^^^^
 
-Test case modules. These use page objects to interact with elements and assert that the expected behavior occurs. A template test file can be found in ``templates/test_case.py``.
+Test case modules. These use page objects to interact with elements and assert
+that the expected behavior occurs. A template test file can be found in
+``templates/test_case.py``.
 
-When adding new test files, be sure to update ``tests/__init__.py`` to include the new module so the framework can detect the new test cases.
+When adding new test files, be sure to update ``tests/__init__.py`` to include
+the new module so the framework can detect the new test cases.
 
 templates/
 ^^^^^^^^^^
 
-Template files to use as a starting point when writing new test modules or page objects.
+Template files to use as a starting point when writing new test modules or page
+objects.
 
-* ``page_object.py``: Template for page objects. Copy to the ``pages/`` directory to use as a starting point when creating new page objects.
-* ``test_case.py``: Template test module. Copy to the ``tests/`` directory to use as a starting point when creating new tests. 
+* ``page_object.py``: Template for page objects. Copy to the ``pages/``
+  directory to use as a starting point when creating new page objects.
+* ``test_case.py``: Template test module. Copy to the ``tests/`` directory to
+  use as a starting point when creating new tests. 
 
 {% if version_badge %}
 ----
