Updated references to classes.webdriver_test_case to point to testcase

--- a/webdriver_test_tools/project/templates/templates/test_case.py.j2
+++ b/webdriver_test_tools/project/templates/templates/test_case.py.j2
@@ -1,7 +1,7 @@
 # IMPORT PAGE OBJECTS HERE
 
 import webdriver_test_tools
-from webdriver_test_tools.classes.webdriver_test_case import WebDriverTestCase, WebDriverMobileTestCase, Browsers
+from webdriver_test_tools.testcase import *
 from {{ test_package }} import config
 from selenium import webdriver
 
