Updated README to include --skip argument

--- a/webdriver_test_tools/project/templates/project_root/README.rst.j2
+++ b/webdriver_test_tools/project/templates/project_root/README.rst.j2
@@ -56,7 +56,7 @@ To run all test cases in one or more modules:
 
     python -m {{test_package}} --module <test_module> [<test_module> ...]
 
-To run specific TestCase classes or methods:
+To run specific test case classes or methods:
 
 ::
 
