--- a/webdriver_test_tools/project/templates/package_root/__main__.py.j2
+++ b/webdriver_test_tools/project/templates/package_root/__main__.py.j2
@@ -5,4 +5,4 @@ from {{test_package}} import config, tests
 
 
 if __name__ == '__main__':
-    test_module.main(tests, config)
+    test_module.main(tests, config, __package__)
