Re-worked template configs and browser test case docstrings
- Template browser and browserstack config modules now use ENABLED_BROWSERS
- Updated docstrings for IE, Edge, and Safari test case classes to references ENABLED_BROWSERS instead of BROWSER_TEST_CLASSES
- Removed commented out code for BrowserConfig.BROWSER_TEST_CLASSES

--- a/webdriver_test_tools/project/templates/config/browser.py.j2
+++ b/webdriver_test_tools/project/templates/config/browser.py.j2
@@ -5,16 +5,17 @@ from webdriver_test_tools.config import browser
 class BrowserConfig(browser.BrowserConfig):
     """Configurations for what browsers to generate tests for
 
-    :var BrowserConfig.BROWSER_TEST_CLASSES: Dictionary of browser test case classes to
-        use indexed by the short name for that class (i.e. its command line argument).
-        Default to Chrome and Firefox since they're not platform specific
+    :var BrowserConfig.ENABLED_BROWSERS: Dictionary mapping browser names to a boolean.
+        True enables the browser, False disables it. Defaults to Chrome and
+        Firefox since they're not platform specific
     """
-    BROWSER_TEST_CLASSES = {
-        Browsers.FIREFOX: FirefoxTestCase,
-        Browsers.CHROME: ChromeTestCase,
-        # Browsers.SAFARI: SafariTestCase,
-        # Browsers.IE: IETestCase,
-        # Browsers.EDGE: EdgeTestCase,
-        # Browsers.CHROME_MOBILE: ChromeMobileTestCase,
+
+    ENABLED_BROWSERS = {
+        Browsers.FIREFOX: True,
+        Browsers.CHROME: True,
+        Browsers.SAFARI: False,
+        Browsers.IE: False,
+        Browsers.EDGE: False,
+        Browsers.CHROME_MOBILE: False,
     }
 
