--- a/webdriver_test_tools/project/templates/templates/page_object.py.j2
+++ b/webdriver_test_tools/project/templates/templates/page_object.py.j2
@@ -1,11 +1,11 @@
-from webdriver_test_tools.pageobject import BasePage
-from webdriver_test_tools.webdriver import actions, locate
 from selenium.webdriver.common.by import By
+from webdriver_test_tools.pageobject import *
+from webdriver_test_tools.webdriver import actions, locate
 
 
 class TemplatePage(BasePage):
 
-    class Locator(object):
+    class Locator:
         """WebDriver locator tuples for any elements that will need to be accessed by
         this page object.
         """
