--- a/webdriver_test_tools/project/templates/tests/__init__.py.j2
+++ b/webdriver_test_tools/project/templates/tests/__init__.py.j2
@@ -1,2 +1,7 @@
-# Import test modules here so {{test_package}}.__main__ can detect them
-# e.g. from . import example_test
+import pkgutil
+
+# Detect and import test modules dynamically
+__path__ = pkgutil.extend_path(__path__, __name__)
+for importer, module, ispkg in pkgutil.walk_packages(path=__path__,prefix=__name__+'.'):
+    __import__(module)
+
