Updated template files
- Template files now render class names and descriptions (if present)
- Added docstrings and cleaned up TODOs

--- a/webdriver_test_tools/project/templates/templates/page_object.py.j2
+++ b/webdriver_test_tools/project/templates/templates/page_object.py.j2
@@ -3,7 +3,8 @@ from webdriver_test_tools.pageobject import *
 from webdriver_test_tools.webdriver import actions, locate
 
 
-class TemplatePage(BasePage):
+class {{ class_name }}(BasePage):
+    {% if description %}"""{{ description }}"""{% endif %}
 
     class Locator:
         """WebDriver locator tuples for any elements that will need to be accessed by
