Re-did example project and docs using new commands
- Re-did example project and updated documentation
- Updated page_object.py.j2 and test_case.py.j2 conditional docstrings
to fix issues with new lines and docstrings
- new_file() no longer sets description if it's set to None. Templates
can insert a default docstring if needed

--- a/webdriver_test_tools/project/templates/templates/page_object.py.j2
+++ b/webdriver_test_tools/project/templates/templates/page_object.py.j2
@@ -4,8 +4,8 @@ from webdriver_test_tools.webdriver import actions, locate
 
 
 class {{ class_name }}(BasePage):
-    {% if description %}"""{{ description }}"""{% endif %}
-
+{% if description %}    """{{ description }}"""
+{% endif %}
     class Locator:
         """WebDriver locator tuples for any elements that will need to be accessed by
         this page object.
