--- a/webdriver_test_tools/project/templates/config/browserstack.py.j2
+++ b/webdriver_test_tools/project/templates/config/browserstack.py.j2
@@ -1,29 +1,26 @@
+import os
 from webdriver_test_tools.config import browserstack
 from webdriver_test_tools.testcase.browsers import *
 
 
 class BrowserStackConfig(browserstack.BrowserStackConfig):
-    """Configurations for BrowserStack testing
+    """Configurations for BrowserStack testing"""
 
-    :var BrowserStackConfig.ENABLE: (Default = False) Set to True to enable BrowserStack testing
-    :var BrowserStackConfig.USERNAME: Account username. Required for BrowserStack testing
-    :var BrowserStackConfig.ACCESS_KEY: Access key. Required for BrowserStack testing
-    :var BrowserStackConfig.BS_CAPABILITIES: BrowserStack test configurations
-    :var BrowserStackConfig.ENABLED_BROWSERS: Dictionary mapping browser names to a boolean.
-        True enables the browser, False disables it. Defaults to Chrome and
-        Firefox since they're not platform specific
-    """
+    # Required Configurations
 
+    #: (Default = False) Set to True to enable BrowserStack testing
     ENABLE = False
-    USERNAME = ''
-    ACCESS_KEY = ''
+    #: Account username. Required for BrowserStack testing
+    USERNAME = os.getenv('BROWSERSTACK_USERNAME', '')
+    #: Access key. Required for BrowserStack testing
+    ACCESS_KEY = os.getenv('BROWSERSTACK_ACCESS_KEY', '')
 
-    BS_CAPABILITIES = {
-        'project': '{{ test_package }}',
-        'browserstack.video': False,
-        # 'browserstack.selenium_version': '{{ selenium_version }}',
-    }
 
+    # Browsers
+
+    #: Dictionary mapping browser names to a boolean. True enables the browser,
+    #: False disables it. Defaults to Chrome and Firefox since they're not
+    #: platform specific
     ENABLED_BROWSERS = {
         Browsers.FIREFOX: True,
         Browsers.CHROME: True,
@@ -34,4 +31,12 @@ class BrowserStackConfig(browserstack.BrowserStackConfig):
     }
 
 
+    # Advanced Configurations
+
+    #: BrowserStack test configurations
+    BS_CAPABILITIES = {
+        'project': '{{ test_package }}',
+        'browserstack.video': False,
+        # 'browserstack.selenium_version': '{{ selenium_version }}',
+    }
 
