--- a/webdriver_test_tools/project/templates/config/site.py.j2
+++ b/webdriver_test_tools/project/templates/config/site.py.j2
@@ -2,11 +2,10 @@ from webdriver_test_tools.config import site
 
 
 class SiteConfig(site.SiteConfig):
-    """URL configurations for a site
-
-    :var SiteConfig.SITE_URL: URL of the home page
-    :var SiteConfig.BASE_URL: Base URL for site pages (followed by a '/')
-    """
+    """URL configurations for a site"""
+    # URL of the home page
     SITE_URL = ''
+    # Base URL for site pages (followed by a '/')
     BASE_URL = ''
+
     # DECLARE ANY OTHER URL VARIABLES NEEDED FOR TESTING HERE
