Implemented new base page template and updated Jinja environment
- Jinja2 templates are now rendered with lstrip_blocks and trim_blocks
set to True (remove whitespace before blocks and new lines after)
- new_file now points to new base_page.py.j2
- Fixed base_page.py.j2 whitespace

--- a/webdriver_test_tools/project/templates/templates/page_object/base_page.py.j2
+++ b/webdriver_test_tools/project/templates/templates/page_object/base_page.py.j2
@@ -5,8 +5,10 @@ from webdriver_test_tools.webdriver import actions, locate
 
 
 class {{ class_name }}({% block parent_class %}BasePage{% endblock %}):
-{% if description %}    """{{ description }}"""
-{% endif %}
+    {% if description %}
+    """{{ description }}"""
+    {% endif %}
+
     class Locator:
         """WebDriver locator tuples for any elements that will need to be
         accessed by this page object.
