Removed old template and started working one for form object prototype
- deleted page_object.py.j2
- Added form_object.py.j2, which extends base_page.py.j2 and adds
starting attributes for FormObject subclasses

--- a/webdriver_test_tools/project/templates/templates/page_object/base_page.py.j2
+++ b/webdriver_test_tools/project/templates/templates/page_object/base_page.py.j2
@@ -15,7 +15,8 @@ class {{ class_name }}({% block parent_class %}BasePage{% endblock %}):
         """
         pass
 
-    {% block additional_attributes %}{% endblock %}
+    {% block additional_attributes %}
+    {% endblock %}
 
     # Page Methods
 
