Added template for modal prototype

--- a/webdriver_test_tools/project/templates/templates/page_object/form_object.py.j2
+++ b/webdriver_test_tools/project/templates/templates/page_object/form_object.py.j2
@@ -9,7 +9,7 @@
 
     # SET THE FOLLOWING ATTRIBUTES TO USE IN FormObject METHODS
 
-    # Locator for the <form/> element
+    # Locator for the form element
     FORM_LOCATOR = None
     # Locator for the form submit button
     SUBMIT_LOCATOR = None
