Added templates for NavObject and CollapsibleNavObject prototypes

--- a/webdriver_test_tools/project/templates/templates/page_object/modal_object.py.j2
+++ b/webdriver_test_tools/project/templates/templates/page_object/modal_object.py.j2
@@ -3,7 +3,7 @@
 {% block parent_class %}prototypes.ModalObject{% endblock %}
 
 {% block additional_attributes %}
-    # SET THE FOLLOWING ATTRIBUTES TO USE IN FormObject METHODS
+    # SET THE FOLLOWING ATTRIBUTES TO USE IN ModalObject METHODS
 
     # Locator for the modal element
     MODAL_LOCATOR = None
