Added deprecation warning to fill_form() and fixed runner config
- FormObject.fill_form() now raises deprecation warning
- default RUNNER_KWARGS now prints unittest default warnings
- FormObject.parse_yaml() now throws YAMLKeyError if the top level form
key is missing

--- a/webdriver_test_tools/project/templates/config/test.py.j2
+++ b/webdriver_test_tools/project/templates/config/test.py.j2
@@ -11,7 +11,7 @@ class TestSuiteConfig(test.TestSuiteConfig):
 
     # Dictionary mapping parameter names to desired values used to initialize
     # the TestRunner configured in RUNNER_CLASS
-    # RUNNER_KWARGS = {}
+    # RUNNER_KWARGS = {'warnings': 'default'}
 
     # Value used if the verbosity parameter is unspecified when calling
     # get_runner()
